--- a/Estudos.EFCore/Estudos.EFCore.csproj
+++ b/Estudos.EFCore/Estudos.EFCore.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.9" />
     </ItemGroup>
 
 </Project>
